drumgizmo/error.txt
../plugin/plugingizmo/pluginlv2.cc:687:13: error: invalid conversion from ‘void* (*)(const _LV2_Descriptor*, double, const char*, const LV2_Feature* const*)’ to ‘void* (*)(const LV2_Descriptor*, double, const char*, const LV2_Feature* const*)’ [-fpermissive]
  687 |  PluginLV2::instantiate,
      |  ~~~~~~~~~~~^~~~~~~~~~~
      |             |
      |             void* (*)(const _LV2_Descriptor*, double, const char*, const LV2_Feature* const*)
../plugin/plugingizmo/pluginlv2.cc:726:13: error: invalid conversion from ‘void* (*)(const _LV2UI_Descriptor*, const char*, const char*, LV2UI_Write_Function, LV2UI_Controller, void**, const LV2_Feature* const*)’ {aka ‘void* (*)(const _LV2UI_Descriptor*, const char*, const char*, void (*)(void*, unsigned int, unsigned int, unsigned int, const void*), void*, void**, const LV2_Feature* const*)’} to ‘void* (*)(const LV2UI_Descriptor*, const char*, const char*, LV2UI_Write_Function, LV2UI_Controller, void**, const LV2_Feature* const*)’ {aka ‘void* (*)(const LV2UI_Descriptor*, const char*, const char*, void (*)(void*, unsigned int, unsigned int, unsigned int, const void*), void*, void**, const LV2_Feature* const*)’} [-fpermissive]
  726 |  PluginLV2::uiInstantiate,
      |  ~~~~~~~~~~~^~~~~~~~~~~~~
      |             |
      |             void* (*)(const _LV2UI_Descriptor*, const char*, const char*, LV2UI_Write_Function, LV2UI_Controller, void**, const LV2_Feature* const*) {aka void* (*)(const _LV2UI_Descriptor*, const char*, const char*, void (*)(void*, unsigned int, unsigned int, unsigned int, const void*), void*, void**, const LV2_Feature* const*)}
make[3]: *** [Makefile:764: drumgizmo_la-pluginlv2.lo] Error 1
make[3]: Leaving directory '/tmp/SBo/drumgizmo-git/plugin'
make[2]: *** [Makefile:867: all-recursive] Error 1
make[2]: Leaving directory '/tmp/SBo/drumgizmo-git/plugin'
make[1]: *** [Makefile:460: all-recursive] Error 1
make[1]: Leaving directory '/tmp/SBo/drumgizmo-git'
make: *** [Makefile:392: all] Error 2

